--- a/public/index.html
+++ b/public/index.html
@@ -1,83 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Team Profile Generator</title>
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <script
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Team Profile Generator</title>
+        <link rel="stylesheet" href="./assets/css/styles.css" />
+        <script
       src="https://kit.fontawesome.com/fc1e1c2b79.js"
       crossorigin="anonymous"
     ></script>
-  </head>
-  <body>
-    <header>
-      <h1>My Team</h1>
-    </header>
+    </head>
+    <body>
+        <header>
+        <h1> My Team </h1>
+        </header>
 
-    <main>
-      <div class="col-4 mt-4">
-        <div class="card h-100">
-          <div class="card-header">
-            <h3>Brandon</h3>
-            <h4>Manager</h4>
-            <i class="fa-solid fa-mug-hot"></i>
-          </div>
-          <div class="card-body">
-            <p class="id">ID: undefined</p>
-            <p class="email">
-              Email:
-              <a href="mailto:bgiordano9917@gmail.com"
-                >bgiordano9917@gmail.com</a
-              >
-            </p>
-            <p class="office">Office Number: 16</p>
-          </div>
+        <main> 
+        <div class="col-4 mt-4">
+            <div class="card h-100">
+                <div class="card-header">
+                    <h3>Brandon</h3>
+                    <h4>Manager</h4><i class="fa-solid fa-mug-hot"></i>
+                </div>
+                <div class="card-body">
+                    <p class="id">ID: 1234</p>
+                    <p class="email">Email: <a href="mailto:bgiordano9917@gmail.com">bgiordano9917@gmail.com</a></p>
+                    <p class="office">Office Number: 12</p>
+                </div>
+            </div>
         </div>
-      </div>
-
-      <div class="col-4 mt-4">
-        <div class="card h-100">
-          <div class="card-header">
-            <h3>Brandon Giordano</h3>
-            <h4>Engineer</h4>
-            <i class="fa-solid fa-glasses"></i>
-          </div>
-          <div class="card-body">
-            <p class="id">ID: undefined</p>
-            <p class="email">
-              Email:
-              <a href="mailto:bgiordano9917@gmail.com"
-                >bgiordano9917@gmail.com</a
-              >
-            </p>
-            <p class="github">
-              Github:
-              <a href="https://github.com/brandongiordano">brandongiordano</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-4 mt-4">
-        <div class="card h-100">
-          <div class="card-header">
-            <h3>brandon3</h3>
-            <h4>Intern</h4>
-            <i class="fa-solid fa-graduation-cap"></i>
-          </div>
-          <div class="card-body">
-            <p class="id">ID: undefined</p>
-            <p class="email">
-              Email:<a href="mailto:bgiordano9917@gmail.com"
-                >bgiordano9917@gmail.com</a
-              >
-            </p>
-            <p class="school">School: undefined</p>
-          </div>
-        </div>
-      </div>
-    </main>
-  </body>
-</html>
+         </main>
+        
+    </body>
+    </html>
